apps/lock-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lock-server
  namespace: bookit
  labels:
    app: lock-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lock-server
  template:
    metadata:
      labels:
        app: lock-server
    spec:
      containers:
        - name: lock-server
          image: ghcr.io/bhatvinay7/bookit-lock-server:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
