apps/matchmaker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaker
  labels:
    app: matchmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matchmaker
  template:
    metadata:
      labels:
        app: matchmaker
    spec:
      serviceAccountName: chess-app
      containers:
        - name: matchmaker
          image: chess-matchmaker:latest
          ports:
            - containerPort: 9102
              name: metrics
