apps/notification-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  labels:
    app: notification-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      serviceAccountName: chess-app
      containers:
        - name: notification-worker
          image: chess-notification-worker:latest
          ports:
            - containerPort: 9104
              name: metrics
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
