apps/search-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-server
  labels:
    app: search-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-server
  template:
    metadata:
      labels:
        app: search-server
    spec:
      serviceAccountName: bookit-app
      containers:
        - name: search-server
          image: ghcr.io/bhatvinay7/bookit-search-server:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
