apps/ws-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
  labels:
    app: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      serviceAccountName: chess-app
      containers:
        - name: ws-server
          image: chess-ws-server:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ws-server
  labels:
    app: ws-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ws-server
