apps/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-grpc-ingress
  labels:
    app: game-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - grpc.chesscounty.life
      secretName: grpc-chesscounty-life-tls
  rules:
    - host: grpc.chesscounty.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-server
                port:
                  number: 50051
