apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookit-ingress
  labels:
    app: bookit
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "ws-server"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.chesscounty.life
        - ws.chesscounty.life
        - web.chesscounty.life
        - chesscounty.life
      secretName: chesscounty-life-tls
  rules:
    - host: api.chesscounty.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  number: 3002
    - host: ws.chesscounty.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-server
                port:
                  number: 8080
    - host: web.chesscounty.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
    - host: chesscounty.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
